// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Providers: ConfigProvider: operatorConfigs should provide operator config 1`] = `
Array [
  Object {
    "operands": 1,
    "type": "has_any_word",
    "verboseName": "has any of the words",
  },
  Object {
    "operands": 1,
    "type": "has_multiple",
    "verboseName": "has multiple values",
  },
  Object {
    "operands": 1,
    "type": "has_all_words",
    "verboseName": "has all of the words",
  },
  Object {
    "operands": 1,
    "type": "has_phrase",
    "verboseName": "has the phrase",
  },
  Object {
    "operands": 1,
    "type": "has_only_phrase",
    "verboseName": "has only the phrase",
  },
  Object {
    "operands": 1,
    "type": "has_beginning",
    "verboseName": "starts with",
  },
  Object {
    "categoryName": "Has Text",
    "operands": 0,
    "type": "has_text",
    "verboseName": "has some text",
  },
  Object {
    "categoryName": "Has Number",
    "operands": 0,
    "type": "has_number",
    "verboseName": "has a number",
  },
  Object {
    "operands": 2,
    "type": "has_number_between",
    "verboseName": "has a number between",
  },
  Object {
    "operands": 1,
    "type": "has_number_lt",
    "verboseName": "has a number below",
  },
  Object {
    "operands": 1,
    "type": "has_number_lte",
    "verboseName": "has a number at or below",
  },
  Object {
    "operands": 1,
    "type": "has_number_eq",
    "verboseName": "has a number equal to",
  },
  Object {
    "operands": 1,
    "type": "has_number_gte",
    "verboseName": "has a number at or above",
  },
  Object {
    "operands": 1,
    "type": "has_number_gt",
    "verboseName": "has a number above",
  },
  Object {
    "categoryName": "Has Date",
    "operands": 0,
    "type": "has_date",
    "verboseName": "has a date",
  },
  Object {
    "operands": 1,
    "type": "has_date_lt",
    "verboseName": "has a date before",
  },
  Object {
    "operands": 1,
    "type": "has_date_eq",
    "verboseName": "has a date equal to",
  },
  Object {
    "operands": 1,
    "type": "has_date_gt",
    "verboseName": "has a date after",
  },
  Object {
    "categoryName": "Has Time",
    "operands": 0,
    "type": "has_time",
    "verboseName": "has a time",
  },
  Object {
    "operands": 1,
    "type": "has_group",
    "verboseName": "is in the group",
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "operands": 0,
    "type": "has_category",
    "verboseName": "has the category",
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "categoryName": "Has Phone",
    "operands": 0,
    "type": "has_phone",
    "verboseName": "has a phone number",
  },
  Object {
    "categoryName": "Has Email",
    "operands": 0,
    "type": "has_email",
    "verboseName": "has an email",
  },
  Object {
    "categoryName": "Has State",
    "filter": "locations",
    "operands": 0,
    "type": "has_state",
    "verboseName": "has state",
  },
  Object {
    "categoryName": "Has District",
    "filter": "locations",
    "operands": 1,
    "type": "has_district",
    "verboseName": "has district",
  },
  Object {
    "categoryName": "Has Ward",
    "filter": "locations",
    "operands": 2,
    "type": "has_ward",
    "verboseName": "has ward",
  },
  Object {
    "categoryName": "Has Error",
    "operands": 0,
    "type": "has_error",
    "verboseName": "has an error",
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "categoryName": "Not Empty",
    "operands": 0,
    "type": "has_value",
    "verboseName": "is not empty",
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_pattern",
    "verboseName": "matches regex",
  },
  Object {
    "categoryName": "Has Media",
    "operands": 0,
    "type": "has_media",
    "verboseName": "has media",
  },
  Object {
    "categoryName": "Has Audio",
    "operands": 0,
    "type": "has_audio",
    "verboseName": "has audio",
  },
  Object {
    "categoryName": "Has Image",
    "operands": 0,
    "type": "has_image",
    "verboseName": "has image",
  },
  Object {
    "categoryName": "Has Video",
    "operands": 0,
    "type": "has_video",
    "verboseName": "has video",
  },
  Object {
    "categoryName": "Has File",
    "operands": 0,
    "type": "has_file",
    "verboseName": "has file",
  },
  Object {
    "categoryName": "Has Location",
    "operands": 0,
    "type": "has_location",
    "verboseName": "has location",
  },
]
`;

exports[`Providers: ConfigProvider: operatorConfigs should provide operator config 2`] = `
Object {
  "has_all_words": Object {
    "operands": 1,
    "type": "has_all_words",
    "verboseName": "has all of the words",
  },
  "has_any_word": Object {
    "operands": 1,
    "type": "has_any_word",
    "verboseName": "has any of the words",
  },
  "has_audio": Object {
    "categoryName": "Has Audio",
    "operands": 0,
    "type": "has_audio",
    "verboseName": "has audio",
  },
  "has_beginning": Object {
    "operands": 1,
    "type": "has_beginning",
    "verboseName": "starts with",
  },
  "has_category": Object {
    "operands": 0,
    "type": "has_category",
    "verboseName": "has the category",
    "visibility": Array [
      "-",
    ],
  },
  "has_date": Object {
    "categoryName": "Has Date",
    "operands": 0,
    "type": "has_date",
    "verboseName": "has a date",
  },
  "has_date_eq": Object {
    "operands": 1,
    "type": "has_date_eq",
    "verboseName": "has a date equal to",
  },
  "has_date_gt": Object {
    "operands": 1,
    "type": "has_date_gt",
    "verboseName": "has a date after",
  },
  "has_date_lt": Object {
    "operands": 1,
    "type": "has_date_lt",
    "verboseName": "has a date before",
  },
  "has_district": Object {
    "categoryName": "Has District",
    "filter": "locations",
    "operands": 1,
    "type": "has_district",
    "verboseName": "has district",
  },
  "has_email": Object {
    "categoryName": "Has Email",
    "operands": 0,
    "type": "has_email",
    "verboseName": "has an email",
  },
  "has_error": Object {
    "categoryName": "Has Error",
    "operands": 0,
    "type": "has_error",
    "verboseName": "has an error",
    "visibility": Array [
      "-",
    ],
  },
  "has_file": Object {
    "categoryName": "Has File",
    "operands": 0,
    "type": "has_file",
    "verboseName": "has file",
  },
  "has_group": Object {
    "operands": 1,
    "type": "has_group",
    "verboseName": "is in the group",
    "visibility": Array [
      "-",
    ],
  },
  "has_image": Object {
    "categoryName": "Has Image",
    "operands": 0,
    "type": "has_image",
    "verboseName": "has image",
  },
  "has_intent": Object {
    "operands": 2,
    "type": "has_intent",
    "verboseName": "has intent",
    "visibility": Array [
      "messaging",
      "messaging_background",
      "voice",
    ],
  },
  "has_location": Object {
    "categoryName": "Has Location",
    "operands": 0,
    "type": "has_location",
    "verboseName": "has location",
  },
  "has_media": Object {
    "categoryName": "Has Media",
    "operands": 0,
    "type": "has_media",
    "verboseName": "has media",
  },
  "has_multiple": Object {
    "operands": 1,
    "type": "has_multiple",
    "verboseName": "has multiple values",
  },
  "has_number": Object {
    "categoryName": "Has Number",
    "operands": 0,
    "type": "has_number",
    "verboseName": "has a number",
  },
  "has_number_between": Object {
    "operands": 2,
    "type": "has_number_between",
    "verboseName": "has a number between",
  },
  "has_number_eq": Object {
    "operands": 1,
    "type": "has_number_eq",
    "verboseName": "has a number equal to",
  },
  "has_number_gt": Object {
    "operands": 1,
    "type": "has_number_gt",
    "verboseName": "has a number above",
  },
  "has_number_gte": Object {
    "operands": 1,
    "type": "has_number_gte",
    "verboseName": "has a number at or above",
  },
  "has_number_lt": Object {
    "operands": 1,
    "type": "has_number_lt",
    "verboseName": "has a number below",
  },
  "has_number_lte": Object {
    "operands": 1,
    "type": "has_number_lte",
    "verboseName": "has a number at or below",
  },
  "has_only_phrase": Object {
    "operands": 1,
    "type": "has_only_phrase",
    "verboseName": "has only the phrase",
  },
  "has_pattern": Object {
    "operands": 1,
    "type": "has_pattern",
    "verboseName": "matches regex",
  },
  "has_phone": Object {
    "categoryName": "Has Phone",
    "operands": 0,
    "type": "has_phone",
    "verboseName": "has a phone number",
  },
  "has_phrase": Object {
    "operands": 1,
    "type": "has_phrase",
    "verboseName": "has the phrase",
  },
  "has_state": Object {
    "categoryName": "Has State",
    "filter": "locations",
    "operands": 0,
    "type": "has_state",
    "verboseName": "has state",
  },
  "has_text": Object {
    "categoryName": "Has Text",
    "operands": 0,
    "type": "has_text",
    "verboseName": "has some text",
  },
  "has_time": Object {
    "categoryName": "Has Time",
    "operands": 0,
    "type": "has_time",
    "verboseName": "has a time",
  },
  "has_top_intent": Object {
    "operands": 2,
    "type": "has_top_intent",
    "verboseName": "has top intent",
    "visibility": Array [
      "messaging",
      "messaging_background",
      "voice",
    ],
  },
  "has_value": Object {
    "categoryName": "Not Empty",
    "operands": 0,
    "type": "has_value",
    "verboseName": "is not empty",
    "visibility": Array [
      "-",
    ],
  },
  "has_video": Object {
    "categoryName": "Has Video",
    "operands": 0,
    "type": "has_video",
    "verboseName": "has video",
  },
  "has_ward": Object {
    "categoryName": "Has Ward",
    "filter": "locations",
    "operands": 2,
    "type": "has_ward",
    "verboseName": "has ward",
  },
}
`;
